# bfpy

./: .gitignore  Earthfile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: codeQuality.yml  lint.yml  main.yml  quality.yml  tests.yml
bfpy/: __main__.py
bfpy/cli/: __init__.py  cli.py  repl.py  run.py
bfpy/core/il/: operation.py  translator.py
bfpy/core/interpreter/: interpreter.py  tape.py
bfpy/core/io/: stream.py
bfpy/core/lexer/: lexer.py
bfpy/core/machine/: machine.py
bfpy/core/parser/: ast.py  parser.py
bfpy/il/: operation.py  translator.py
bfpy/lexer/: lexer.py  token.py
bfpy/parser/: ast.py  parser.py
bfpy/repl/: repl.py
tests/cli/: conftest.py  test_cli.py
tests/core/il/: conftest.py  test_operation.py  test_translator.py
tests/core/interpreter/: conftest.py  test_finite_tape.py  test_interpreter.py  test_tape.py
tests/core/interpreter/tape/: conftest.py
tests/core/io/: conftest.py  test_stream.py
tests/core/lexer/: conftest.py  test_lexer.py
tests/core/machine/: conftest.py  test_machine.py
tests/core/parser/: conftest.py  test_ast.py  test_parser.py
tests/il/: test_operation.py  test_translator.py
tests/lexer/: test_lexer.py
tests/parser/: test_ast.py  test_parser.py
tests/repl/: conftest.py  test_repl.py
