[tool.poetry]
name = "bfpy"
version = "0.1.0"
description = "One more brainfuck in your life ¯\\_(ツ)_/¯"
authors = ["ameyuuno <ameyuuno@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
